# unsloth-multi-dataset-lora-finetuning

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  main.py  pyproject.toml
configs/: dataset_config.yaml  model_config.yaml  questions.yaml
evaluation/: benchmark.py
inference/: compare_models.py  comparison.py
notebooks/: inference_comparison_evaluation.ipynb
scripts/: dataset_merger.py  train.py
training/: pro_lora_training_tracked.ipynb  training_colab.ipynb
