[project]
name = "unsloth-multi-dataset-lora-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
    "unsloth>=2025.7.2",
]
